# originalRepoName

./: .coveragerc  .dockerignore  .env.example  .gitignore  BOTS.md  CONTRIBUTING.md  DOCKER.md  PLAN.md  README.md  check_presence.py  docker-compose.yml  package-lock.json  package.json  pytest.ini  test_api.py  test_roster.py  test_xmpp.py  test_xmpp2.py  todo
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.backup  .env.example  .gitignore  Dockerfile  Makefile  cleanup.py  commit_tests.py  config.py  coverage.xml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_simple_test.py  run_tests.ps1  run_tests.sh  test_basic.py  test_runner.py  verify_setup.py
backend/api/: __init__.py  auth.py  bots.py  health.py  users.py
backend/models/: __init__.py  user.py
backend/services/: __init__.py  file_upload.py  get_online_users.py  prosody.py  supabase.py  user_sync.py
backend/tests/: README.md  conftest.py  test_api.py  test_integration.py  test_models.py  test_services.py  test_simple.py
bots/aether-bot-sdk/: index.js  package-lock.json  package.json
bots/andrei-filter/: index.js  package-lock.json  package.json
bots/chatter/: .dockerignore  Dockerfile  agents.json  check_bots.js  index.js  package-lock.json  package.json
bots/swear-shield/: Dockerfile  index.js  package-lock.json  package.json
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  build_log.txt  eslint.config.js  index.html  lint-output.txt  old_chat_temp.tsx  package-lock.json  package.json  playwright.config.ts  test_parse.js  test_presence.js  test_stanza.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Auth.tsx  AuthContext.tsx  BotContext.tsx  BotsPage.tsx  Chat.tsx  ChatContext.tsx  DMsPage.tsx  LanguageContext.tsx  Layout.tsx  MucContext.tsx  RoomChat.tsx  RoomsPage.tsx  RoomsRedirect.tsx  config.ts  i18n.ts  index.css  main.tsx  supabase.ts
frontend/tests/: global-setup.ts
nginx/: nginx.conf
prosody/: .env.example  Dockerfile  generate-certs.sh  prosody.cfg.lua
prosody/modules/: mod_admin_net.lua  mod_auth_supabase.lua  mod_online_rest.lua
supabase/: pinned_messages.sql  reactions.sql
(+14 files in other folders)
