[project]
name = "xmpp-chat-backend"
version = "0.1.0"
description = "XMPP Chat Application Backend"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "respx>=0.20.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
explicit_package_bases = true
namespace_packages = true

cache_dir = "/tmp/mypy_cache"

exclude = [
    "^tests/",
    "^cleanup\\.py$",
    "^commit_tests\\.py$",
    "^run_simple_test\\.py$",
    "^test_basic\\.py$",
    "^test_runner\\.py$",
    "^verify_setup\\.py$",
]

ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--durations=10",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for multiple components", 
    "slow: Tests that take longer to run",
    "external: Tests that require external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    "__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]